[package]
name = "regression"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
gauss-seidel = []
slog-logger = ["slog", "slog-term", "slog-async"]

[[bin]]
name = "logistic"
path = "src/bin/main.rs"
required-features = ["argmin-math/ndarray_latest-serde", "slog-logger"]

[lib]
name = "optimization"
path = "src/lib.rs"

[dependencies]
ndarray = "0.15.6"
csv = "1.1"

ndarray-linalg = { version = "0.14", features = ["netlib"] }
slog = { version = "2.4.1", optional = true, features = ["dynamic-keys"] }
slog-term = { version = "2.8.1", optional = true }
slog-async = { version = "2.7.0", optional = true }

argmin = { version = "0.7", features = ["slog-logger", "serde1"]}
argmin-math = { version = "0.2", features = ["nalgebra_latest-serde"] }
finitediff = { version = "0.1.4", features = ["ndarray"] }
argmin_testfunctions = "0.1.1"
